# strict-kwargs-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  update.py
.github/workflows/: mirror.yml
