# This package is intentionally code-free. Its only job is to pin a
# dependency on a published `strict-kwargs` wheel so that pre-commit's
# `language: python` installs the prebuilt binary from PyPI, with no Rust
# toolchain required on the machine running the hook.
#
# The package version and the `strict-kwargs==` pin are kept identical and in
# lockstep with the mirrored upstream release by `update.py` (run manually or
# by `.github/workflows/mirror.yml`). Consumers pin the matching git tag via
# `rev:` in their `.pre-commit-config.yaml`.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "strict-kwargs-pre-commit"
version = "2026.5.19"
description = "A pre-commit mirror of strict-kwargs (installs the published PyPI wheel; no Rust toolchain needed)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "strict-kwargs==2026.5.19",
]

urls.Source = "https://github.com/adamtheturtle/strict-kwargs-pre-commit"
urls.Upstream = "https://github.com/adamtheturtle/strict-kwargs"

[tool.setuptools]
# No modules: build an empty wheel that exists only to carry the dependency.
py-modules = []
